deploy/kubernetes/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: infervoyage-dev
  labels:
    app: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
    - name: metrics
      port: 9187
      targetPort: metrics
  selector:
    app: postgres
  type: ClusterIP
